--- a/LD50/LD50.csproj
+++ b/LD50/LD50.csproj
@@ -88,6 +88,9 @@
     <None Update="Shaders\vsPost.glsl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Sprites\Backgrounds\DrivingSceneBG.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Sprites\CarBase.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
