Add Dragon Blacl&White texture with randomized colour fill

--- a/LD50/LD50.csproj
+++ b/LD50/LD50.csproj
@@ -94,6 +94,9 @@
     <None Update="Sprites\CarBase.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Sprites\Enemies\DragonBW.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Sprites\Rooms\Bedroom.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
