--- a/LD50/LD50.csproj
+++ b/LD50/LD50.csproj
@@ -97,6 +97,9 @@
     <None Update="Sprites\Enemies\DragonBW.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Sprites\Enemies\FishbowlIdleTwoFrames.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Sprites\Rooms\Bedroom.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
