--- a/LD50/LD50.csproj
+++ b/LD50/LD50.csproj
@@ -112,6 +112,9 @@
     <None Update="Sprites\Enemies\FishbowlWalkTwoFrames.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Sprites\Enemies\SlimeIdleTwoFrames.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Sprites\Loot\Food.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
