--- a/LD50/LD50.csproj
+++ b/LD50/LD50.csproj
@@ -121,6 +121,9 @@
     <None Update="Sprites\Enemies\SlimeIdleTwoFrames.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Sprites\Guns\BetterGun.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Sprites\Loot\Food.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
