Add textures for the rest of the guns
 - Add texture pngs
 - Update textures in TextureList
 - Adjust scaling and offset in respective gun classes

--- a/LD50/LD50.csproj
+++ b/LD50/LD50.csproj
@@ -124,7 +124,19 @@
     <None Update="Sprites\Enemies\SlimeIdleTwoFrames.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Sprites\Guns\BaseGun.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Sprites\Guns\BetterGun.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Sprites\Guns\FasterGun.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Sprites\Guns\RocketGun.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Sprites\Guns\SniperGun.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Sprites\Loot\Food.png">
