Add background for Fuel Pile and Food Pile

--- a/LD50/LD50.csproj
+++ b/LD50/LD50.csproj
@@ -103,6 +103,9 @@
     <None Update="Sprites\Backgrounds\DrivingSceneBG.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Sprites\Backgrounds\LootBG.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Sprites\CarBase.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
