--- a/LD50/LD50.csproj
+++ b/LD50/LD50.csproj
@@ -193,6 +193,9 @@
     <None Update="Sprites\Persons\PersonWalkTwoFramesFlipped.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Sprites\Roadsign.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Sprites\Rooms\Bedroom.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
