--- a/LD50/LD50.csproj
+++ b/LD50/LD50.csproj
@@ -115,6 +115,9 @@
     <None Update="Sprites\Enemies\DragonBW.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Sprites\Enemies\DragonIdleTwoFrames.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Sprites\Enemies\FishbowlIdleTwoFrames.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
